--- a/templates/Details.html
+++ b/templates/Details.html
@@ -1,5 +1,20 @@
 {% extends 'base.html' %}
 {% block main_content %}
+<div class="d-flex align-items-center mb-4 gsap-reveal gsap-reveal-filter">
+    <h2 class="mr-auto heading-h2"><span class="gsap-reveal">Details</span></h2>
+  
+    <!-- <a href="#" class="text-white js-filter d-inline-block d-lg-none">Filter</a>
+    
+    <div class="filter-wrap">
+      <div class="filter ml-auto" id="filters">
+        <a href="#" class="active" data-filter="*">All</a>
+        <a href="#" data-filter=".web">Web</a>
+        <a href="#" data-filter=".branding">Branding</a>
+        <a href="#" data-filter=".illustration">Illustration</a>
+        <a href="#" data-filter=".packaging">Packaging</a>
+      </div>
+    </div> -->
+  </div>
 <div class="container my-5">
     <div class="card shadow-3">
         <div class="card-header text-center py-4">
