--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,46 @@
 {% extends 'base.html' %}
+{% load static %}
+
+
 {% block main_content %}
+<div class="d-flex align-items-center mb-4 gsap-reveal gsap-reveal-filter">
+  <h2 class="mr-auto heading-h2"><span class="gsap-reveal">Add details</span></h2>
+
+  <!-- <a href="#" class="text-white js-filter d-inline-block d-lg-none">Filter</a>
+  
+  <div class="filter-wrap">
+    <div class="filter ml-auto" id="filters">
+      <a href="#" class="active" data-filter="*">All</a>
+      <a href="#" data-filter=".web">Web</a>
+      <a href="#" data-filter=".branding">Branding</a>
+      <a href="#" data-filter=".illustration">Illustration</a>
+      <a href="#" data-filter=".packaging">Packaging</a>
+    </div>
+  </div> -->
+</div>
+<div class="cover-v1 jarallax" style="background-image: url('{% static 'images/header_background.jpg' %}');" id="home-section">
+  <div class="container">
+    <div class="row align-items-center">
+        
+      <div class="col-md-7 mx-auto text-center">
+        <h1 class="heading gsap-reveal-hero" style="color: cyan;">Access The Product</h1>
+        <h2 class="subheading gsap-reveal-hero" style="color: cyan;">Hi, site will provide you the product with details using your access code</h2>
+      </div>
+
+    </div>
+  </div>
+
+
+  <a href="#portfolio-section" class="mouse-wrap smoothscroll">
+    <span class="mouse">
+      <span class="scroll"></span>
+    </span>
+    <span class="mouse-label">Scroll</span>
+  </a>
+
+</div>
+
+
 <div class="container">
   <form method="POST">
     {% csrf_token %}
